--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Global styles */
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Exo 2', sans-serif;
   background-color: #1e1e1e;
   color: #f8f8f8;
 }
